# hilsim

./: .gitignore  BaseSensor.py  LICENSE  README.md  config.toml  controls_config.toml  data_config.toml  device_config.toml  main.py  pyproject.toml  sensor_config.toml  world_state.toml
examples/: actuator_config.toml  device_config.toml  main.py  sensor_config.toml  world_state.toml
src/: BMP388Driver.py  BaseSensor.py  CreateFakeSensors.py  DriverRegistry.py  FakeBMP388.py  FakeINA260.py  FakeME2.py  FakeSCD30.py  FakeSTEMMA.py  I2CBus.py  INA260Driver.py  LoadTOML.py  ME2Driver.py  RP2040.py  SCD30Driver.py  STEMMADriver.py  SensorExceptions.py  SensorManager.py  SensorTracker.py  actuators.py  base_driver.py  bmp388.py  bmp388_driver.py  co2_solenoid.py  controls.py  create_fake_sensors.py  device_exceptions.py  fake_bmp388.py  fake_ina260.py  fake_me2.py  fake_scd30.py  fake_stemma.py  file_manager.py  i2c_bus.py  i2c_exceptions.py  ina260.py  ina260_driver.py  main.py  me2.py  me2_driver.py  (+9 more)
tests/: conftest.py  test_BMP388Driver.py  test_BaseSensor.py  test_Controls.py  test_FakeBMP388.py  test_FakeME2.py  test_FakeSCD30.py  test_FakeSTEMMA.py  test_FakeSerial.py  test_I2CBus.py  test_LoadTOML.py  test_ME2Driver.py  test_SCD30Driver.py  test_STEMMADriver.py  test_SensorManager.py  test_SensorTracker.py  test_actuator_base.py  test_advanced_communication.py  test_base_driver.py  test_bmp388_driver.py  test_communication_interface.py  test_controls.py  test_fake_bmp388.py  test_fake_ina260.py  test_fake_me2.py  test_fake_scd30.py  test_fake_serial.py  (+11 more)
(+80 files in other folders)
